# cli-jaw

./: .dockerignore  .env.example  .gitignore  .gitmodules  .npmignore  .pabcd-plan-chat-scroll.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.ja.md  README.ko.md  README.md  README.zh-CN.md  TESTS.md  docker-compose.yml  esbuild.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  server.js  server.ts  tsconfig.build.json  tsconfig.frontend.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
devlog/: str_func.md  verify-counts.sh
docs/: ARCHITECTURE.md  clijaw-intro.html  index.html  manager-notes-obsidian-roadmap.md  manager-notes-wysiwyg-task-safety.md  officecli-integration.md  record-intro.mjs  skill-router-plan.md  windows.html
electron/: README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json
lib/: mcp-sync.js  mcp-sync.ts  mime-detect.ts  quota-copilot.js  quota-copilot.ts  stt.ts  token-keepalive.ts  upload.ts
mac-app/: jaw-launcher.m
native/jaw-claude-i/: Cargo.toml
native/jaw-claude-i/src/: args.rs  child.rs  cleanup.rs  config.rs  hook.rs  main.rs  normalize.rs  protocol.rs  sanitize.rs  terminal.rs  transcript.rs
public/: index.html  manifest.json  sw.js  theme-test.html
scripts/: check-copilot-gap.js  check-copilot-gap.ts  check-deps-offline.ts  check-electron-no-native.cjs  check-strict-baseline.mjs  claim-audit.mjs  fresh-install-smoke.ts  i18n-registry.ts  install-officecli.ps1  install-officecli.sh  install-wsl.sh  install.sh  release.sh  (+4 more)
(+1333 files in other folders)
